# Citation-Checker

./: .dockerignore  .env  .env.production  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/: .env.production  .prettierrc  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: core.ts  index.html  startup-interactions.ts  style.css  types.ts  ui-elements.ts
client/src/components/: citation-card-list.ts  dropdown-multi-select.ts  dropdown-single-select.ts  filter-dropdown-multi-select.ts  sort-dropdown-single-select.ts  summary-panel.ts
client/src/logic/: api.ts  pdf-parser.ts  tokenizer.ts
public/: index.html
public/assets/: index-Y9qShYgi.css  index-kW2AhUpS.js
server/: Cargo.toml
server/src/: main.rs
src/client/: core.ts  index.html  main.ts  style.css  ui-elements.ts
src/client/logic/: api.ts  citation-parser.ts  pdf-parser.ts
src/server/: index.ts
src/types/: types.ts
